mypage-insurance-platform/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-api-svc
spec:
  selector:
    app: insurance-platform
    component: api
  ports:
  - port: 80
    targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: insurance-admin-svc
spec:
  selector:
    app: insurance-platform
    component: admin
  ports:
  - port: 80
    targetPort: 80
